--- a/src/app/modules/StudentSubject/student-subject-mark-comp/student-subject-mark-comp.component.scss
+++ b/src/app/modules/StudentSubject/student-subject-mark-comp/student-subject-mark-comp.component.scss
@@ -1,7 +1,7 @@
-mat-card{
-    //position: absolute;
-    margin-top: 100px;
-}
+// mat-card{
+//     //position: absolute;
+//     margin-top: 100px;
+// }
 mat-form-field{
     margin-right:15px;
 }
