--- a/src/app/modules/AdminSettings/controlhome/controlhome.component.html
+++ b/src/app/modules/AdminSettings/controlhome/controlhome.component.html
@@ -1,4 +1,4 @@
-<div style="background-color:lightgray">
+<div>
     <app-header [deviceXs]="deviceXs"></app-header>
     <router-outlet></router-outlet>
-    </div>
+</div>
