--- a/src/app/modules/FeesManagement/feesmanagementhome/feesmanagementhome.component.html
+++ b/src/app/modules/FeesManagement/feesmanagementhome/feesmanagementhome.component.html
@@ -1,4 +1,5 @@
-<FeeHeader (toggleSideBarForme)="sideBarToggler()"></FeeHeader>
+<app-header></app-header>
+<!-- <FeeHeader (toggleSideBarForme)="sideBarToggler()"></FeeHeader> -->
 <mat-drawer-container>
     <mat-drawer mode="side" [opened]="openSideBar">
         <FeeSidebar></FeeSidebar>
