--- a/src/app/modules/StudentSubject/studenthome/studenthome.component.html
+++ b/src/app/modules/StudentSubject/studenthome/studenthome.component.html
@@ -1,4 +1,15 @@
-<div style="background-color:lightgray">
+<!-- <div style="background-color:lightgray">
     <app-header [deviceXs]="deviceXs"></app-header>
     <router-outlet></router-outlet>
-</div>
+</div> -->
+
+<app-header></app-header>
+<mat-drawer-container>
+    <mat-drawer mode="side" [opened]="openSideBar">
+        <app-MultiLevelMenu></app-MultiLevelMenu>
+    </mat-drawer>
+    <mat-drawer-content>
+        <!-- <alert></alert> -->
+        <router-outlet></router-outlet>
+    </mat-drawer-content>
+</mat-drawer-container>
