--- a/src/app/modules/StudentSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
+++ b/src/app/modules/StudentSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
@@ -1,50 +1,87 @@
-<div class="container">
-    <div style="padding:15px 15px 0px 15px;">
-        <div><strong>Student Subject</strong></div>
-        <div>{{studentInfoTodisplay}}</div>
-    </div>
-    <mat-spinner *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
-    <alert></alert>
-    <div style="padding: 15px;" fxLayout="row wrap">
-        <div style="width: 100%;">
-           
-            <mat-table #table [dataSource]="dataSource">
-                <ng-container matColumnDef="Subject">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Subject
-                    </mat-header-cell>
-                    <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                            {{element.Subject}}                      
-                    </mat-cell>
-                   
-                </ng-container>
-                <ng-container matColumnDef="SubjectType">
-                    <mat-header-cell *matHeaderCellDef> Subject Type </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element.SubjectType}}
-                    </mat-cell>
-                </ng-container>                
-                <ng-container matColumnDef="Active">
-                    <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-checkbox 
-                        (click)="$event.stopPropagation()"
-                        (change)="UpdateActive(element,$event)" 
+<mat-card>
+    <mat-card-title>Student Subject</mat-card-title>
+    <mat-card-subtitle>&nbsp;</mat-card-subtitle>
+    <mat-card-content>
+        <alert></alert>
+        <mat-spinner *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
+        <form [formGroup]="searchForm">
+            <mat-form-field appearance="outline">
+                <mat-label>Batch</mat-label>
+                <mat-select formControlName="searchBatchId">
+                    <mat-option value="0">--select--</mat-option>
+                    <mat-option *ngFor="let item of Batches" [value]="item.MasterDataId">
+                        {{item.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Class</mat-label>
+                <mat-select formControlName="searchClassId">
+                    <mat-option value="0">--select--</mat-option>
+                    <mat-option *ngFor="let item of Classes" [value]="item.MasterDataId">
+                        {{item.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Subject</mat-label>
+                <mat-select formControlName="searchSubjectId">
+                    <mat-option value="0">--select--</mat-option>
+                    <mat-option *ngFor="let item of Subjects" [value]="item.MasterDataId">
+                        {{item.MasterDataName}}
+
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button class="mat-raised-button" (click)="GetStudentClassSubject()">
+                <mat-icon>search</mat-icon>
+            </button>
+            <button matTooltip="clear all" class="mat-raised-button" (click)="clear()">
+                <mat-icon>clear_all</mat-icon>
+            </button>
+        </form>
+        Subject can be assigned to student defined in student class.
+        <mat-table #table [dataSource]="dataSource">
+            <ng-container matColumnDef="Student">
+                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Student
+                </mat-header-cell>
+                <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
+                    {{element.Student}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Subject">
+                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Subject
+                </mat-header-cell>
+                <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
+                    {{element.Subject}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="SubjectType">
+                <mat-header-cell *matHeaderCellDef> Subject Type </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.SubjectType}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Active">
+                <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="UpdateActive(element,$event)"
                         [checked]="element.Active==1?true:false">
-                        </mat-checkbox>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Action">
-                    <mat-header-cell *matHeaderCellDef>
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="!element.Action" matTooltip="view/edit" mat-mini-fab (click)="UpdateOrSave(element)">
-                            <mat-icon>save</mat-icon>
-                        </button>
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
-            </mat-table>
-        </div>      
-    </div>
-</div>
+                    </mat-checkbox>
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Action">
+                <mat-header-cell *matHeaderCellDef>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
+                    <button [disabled]="!element.Action" matTooltip="view/edit" mat-mini-fab
+                        (click)="UpdateOrSave(element)">
+                        <mat-icon>save</mat-icon>
+                    </button>
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+        </mat-table>
+    </mat-card-content>
+</mat-card>
