--- a/src/app/modules/StudentSubject/subject-types/subject-types.component.html
+++ b/src/app/modules/StudentSubject/subject-types/subject-types.component.html
@@ -1,52 +1,46 @@
-<div class="container">
-    <div style="padding:15px 15px 0px 15px;">
-        <div><strong>Subject Types</strong></div>
-    </div>
-    <mat-spinner *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
-    <alert></alert>
-    <div style="padding: 15px;" fxLayout="row wrap">
-        <div style="width: 100%;">
-            <mat-table #table [dataSource]="dataSource">
-                <ng-container matColumnDef="SubjectTypeName">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Subject Type Name
-                    </mat-header-cell>
-                    <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                        <mat-form-field [style.width.px]="150">
-                            <input matInput [(value)]="element.SubjectTypeName" [(ngModel)]="element.SubjectTypeName">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="SelectHowMany">
-                    <mat-header-cell *matHeaderCellDef> No. Of Subject to Select </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.px]="150">
-                            <input matInput [(value)]="element.SelectHowMany" [(ngModel)]="element.SelectHowMany">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Active">
-                    <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-checkbox [checked]="element.Active==1?true:false">
-                        </mat-checkbox>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Action">
-                    <mat-header-cell *matHeaderCellDef>
-                        <button matTooltip="add new" mat-mini-fab (click)="addnew()">
-                            <mat-icon>add</mat-icon>
-                        </button>
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button matTooltip="view/edit" mat-mini-fab (click)="UpdateOrSave(element)">
-                            <mat-icon>save</mat-icon>
-                        </button>
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
-            </mat-table>
-        </div>
-
-    </div>
-</div>
+<mat-card>
+    <mat-card-title>Subject Types</mat-card-title>
+    <mat-card-subtitle>&nbsp;</mat-card-subtitle>
+    <mat-card-content>
+        <mat-spinner *ngIf="loading" diameter="50" style="position:relative;margin-left: 50%;"></mat-spinner>
+        <alert></alert>
+        <mat-table #table [dataSource]="dataSource">
+            <ng-container matColumnDef="SubjectTypeName">
+                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Subject Type Name
+                </mat-header-cell>
+                <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
+                    {{element.SubjectTypeName}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="SelectHowMany">
+                <mat-header-cell *matHeaderCellDef> No. Of Subject to Select </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-form-field [style.width.px]="150">
+                        <input matInput [(value)]="element.SelectHowMany" [(ngModel)]="element.SelectHowMany">
+                    </mat-form-field>
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Active">
+                <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)" [checked]="element.Active==1?true:false">
+                    </mat-checkbox>
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Action">
+                <mat-header-cell *matHeaderCellDef>
+                    <button matTooltip="add new" mat-mini-fab (click)="addnew()">
+                        <mat-icon>add</mat-icon>
+                    </button>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
+                    <button matTooltip="view/edit" mat-mini-fab (click)="UpdateOrSave(element)">
+                        <mat-icon>save</mat-icon>
+                    </button>
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+        </mat-table>
+    </mat-card-content>
+</mat-card>
