--- a/src/app/modules/define-pages/displaypage/displaypage.component.html
+++ b/src/app/modules/define-pages/displaypage/displaypage.component.html
@@ -25,7 +25,7 @@
                     <div class="proto"></div>               
                 </div>
                 <!-- <div class="displaycontent"> -->
-                    <p [innerHTML]="PageBody|encodeHTML"></p>
+                    <p class="pcontent" [innerHTML]="PageBody|encodeHTML"></p>
                 <!-- </div> -->
             </div>
         </div>
