--- a/src/app/modules/files/filedrag-and-drop/filedrag-and-drop.component.scss
+++ b/src/app/modules/files/filedrag-and-drop/filedrag-and-drop.component.scss
@@ -1,11 +1,14 @@
-:host{
+:host {
     width: 100%;
 }
-mat-form-field{
-    width:30% !important;
+
+mat-form-field {
+    width         : 30% !important;
     //margin-right: 10px;
 }
-mat-card{
-   // background-color:lightgray;
+
+mat-card {
+    // background-color:lightgray;
+    width     : 100%;
     margin-top: 15px;
 }
