--- a/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.scss
+++ b/src/app/modules/photogallery/imgDragAndDrop/imgDragAndDrop.scss
@@ -16,7 +16,7 @@ input:hover{
      margin-top: 5px;
  }
  mat-card{
-   // width: 100%;
+   width: 100%;
     //background-color:lightgray;
     margin-top: 15px;
     
