--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -1,46 +1,55 @@
     mat-drawer {
         border-top-right-radius: 1em 1em;
-        width            : 250px;
-        background-repeat: no-repeat;
-        background-color :var(--maincolor1);// #1E4A75;//#20639b;
-//        opacity: .9;
-        height           : 100%;
-        top              : 115px;
+        width                  : 250px;
+        background-repeat      : no-repeat;
+        background-color       : var(--maincolor1); // #1E4A75;//#20639b;
+        //        opacity: .9;
+        height                 : 100%;
+        top                    : 115px;
     }
 
     mat-drawer-content {
         //background:url('/assets/images/schoolbuilding2018.jfif') no-repeat 0 0 transparent;
         //background-color: #0F5298;
-        top             : 100px;
-        border-radius   : 1em;
-        margin-bottom   : 20px;
-        padding-bottom  : 100px;
+        top           : 100px;
+        border-radius : 1em;
+        margin-bottom : 20px;
+        padding-bottom: 100px;
     }
 
     .rightpanel {
-        background-color: var(--maincolor1);// #1E4A75;
+        background-color: var(--maincolor1); // #1E4A75;
     }
 
     mat-drawer-container {
-        background-color:var(--maincolor2);//#00203F;//#0e4a8b;// #0F5298;
+        background-color: var(--maincolor2); //#00203F;//#0e4a8b;// #0F5298;
         //overflow: auto;
         //display: inline-block;
         //opacity: .5;
         //background:url('/assets/images/schoolbuilding2018.jfif') no-repeat 0 0 transparent;
     }
 
+    @media only screen and (max-width: 600px) {
+        mat-drawer {
+            position: fixed;
+            top     : 15px;
+        }
+
+    }
+
     app-footer {
         position: inherit;
     }
+
     // app-right{
     //     border-radius: 5px;
     // }
     .DeviceXs {
         //position:absolute;
         //position: absolute;
-        top: 155px !important;
+        top     : 155px !important;
         //margin:2px;
-        
+
         // float:right;
         // display:flex;
     }
@@ -48,13 +57,11 @@
     .OpenAndDeviceXs {
 
         //position: absolute;
-        top: 155px !important;        
-        
+        top: 155px !important;
+
         //transform: translate(-50%, -50%);
     }
 
     .NotDeviceXs {
         margin-top: 0px !important;
     }
-
-    
